# deprecated-mingw32-netcf

./: Makefile.am  bootstrap  configure.ac  mingw32-netcf.spec.in  netcf-wininst.nsi  netcf.pc.in
ip_helper/: iphlpapi.def  printAdapterInfo.c
src/: Makefile.am  drv_initscripts-win.c  drv_initscripts.c  drv_mswindows.c  dutil.c  dutil.h  dutil_linux.c  dutil_linux.h  dutil_mswindows.h  internal.h  ncftool.c  ncftransform.c  netcf-win.c  netcf.c  netcf.h  netcf_win.c  netcf_win.h  xslt_ext.c
wmi/: NetworkDevice.cpp
